# GiffMeMoney

./: .dockerignore  .env.example  .gitignore  DECISIONS.md  GiffMeMoney-Landing.html  README.md  build_explainer_pdf.py  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt  run.py
backend/app/: config.py  main.py  schemas.py
backend/app/api/: assets.py  auth.py  bot.py  broker.py  hft.py  invest.py  livesim.py  market.py  portfolio.py  recommendations.py  strategies.py
backend/app/auth/: __init__.py  deps.py  security.py  service.py  store.py
backend/app/bot/: __init__.py  attribution.py  engine.py  policies.py
backend/app/broker/: __init__.py  alpaca.py  base.py  simulated.py
backend/app/db/: __init__.py  models.py  repositories.py  session.py
backend/app/hft/: __init__.py  costs.py  execution.py  intraday.py  lab.py  signals.py
backend/app/invest/: __init__.py  advisor.py  history.py  payments.py  portfolio_service.py  store.py  wallet.py
backend/app/livesim/: __init__.py  engine.py  predictor.py  store.py
backend/app/market/: feed.py  provider.py  simulator.py  universe.py
backend/app/quant/: backtest.py  capm.py  factor.py  forecast.py  fundamental.py  indicators.py  (+11 more)
backend/tests/: conftest.py  test_api.py  test_auth.py  test_backtest.py  test_bot.py  test_broker.py  test_feasibility.py  test_hft.py  test_indicators.py  test_invest.py  test_livesim.py  test_metrics.py  test_models.py  test_persistence.py  test_projection.py  test_providers.py  test_risk_controls.py  test_strategies.py  test_strategies_v2.py
(+158 files in other folders)
